--- a/index.html
+++ b/index.html
@@ -1,103 +1,45 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>My First Bitstarter</title>
-    <link type="text/css" rel="stylesheet" 
-          href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
-    <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-      }
-      .container {
-        width: 960px;
-      }
-      p.lead {
-        padding-top: 15px;
-      }
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-        padding: 10px 0px 10px 0px;
-      }
-      .video, .thermometer, .order, .social {
-        border: 1px dotted;
-        text-align: center;
-      }
-      .video {
-        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-        height: 124px;
-        line-height: 124px;
-      }
-      .thermometer, .order, .social {
-        /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-        height: 40px;
-        line-height: 40px;
-      }
-      div.row {
-        border: 1px solid;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row navigation">
-        <div class="span2 logo">
-          Logo
-        </div>
-        <div class="span6 blank">
-          Blank
-        </div>
-        <div class="span4 about">
-          About
-        </div>
-      </div>
-      <div class="row heading">
-        <div class="span12">
-          <h1>Bitstarter Title</h1>
-        </div>
-      </div> 
-     <div class="row subheading">
-        <div class="span12">
-          <p class="lead">This is my first bitstarter project.</p>
-        </div>
-      </div>
-      <div class="row pitch">
-        <div class="span6 video">
-          Video
-        </div>
-        <div class="span6">
-          <div class="thermometer">
-            Thermometer
-          </div>
-          <div class="order">
-            Order
-          </div>
-          <div class="social">
-            Social
-          </div>
-        </div>
-      </div>
-      <div class="row section1">
-        <div class="span12">
-          Marketing Section 1
-        </div>
-      </div>
-      <div class="row section2">
-        <div class="span12">
-          Marketing Section 2
-        </div>
-      </div>
-      <div class="row faq">
-        <div class="span12">
-          FAQ
-        </div>
-      </div>
-      <div class="row footer">
-        <div class="span12">
-          Footer
-        </div>
-      </div>
-    </div>
-  </body>
+        <!-- init stuff here -->
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false" />
+        <div id="heatmapArea" />
+        <script type="text/javascript" src="heatmap.js" />
+        <script type="text/javascript" src="heatmap-gmaps.js" />
+        <script type="text/javascript">
+                window.onload = function() {
+                        var myLatLong = new google.maps.LatLng(48.3333, 16.35);
+                        var myOptions = {
+                                zoom: 3,
+                                center: myLatLong,
+                                mapTypeId: google.maps.MapTypeId.ROADMAP,
+                                disableDefaultUI: false,
+                                scrollwheel: true,
+                                draggable: true,
+                                navigationControl: true,
+                                mapTypeControl: false,
+                                scaleControl: true,
+                                disableDoubleClickZoom: false
+                        };
+
+                        var map = new google.maps.Map($("#heatmapArea")[0], myOptions);
+                        var heatmap = new HeatmapOverlay(map, {
+                                "radius":20,
+                                "visible":true,
+                                "opacity":60
+                        });
+
+                        var testData={
+                                max: 46,
+                                data: [{lat: 33.5363, lng:-117.044, count: 1},
+                                {lat: 33.5608, lng:-117.24, count: 1},
+                                {lat: 38, lng:-97, count: 1},
+                                {lat: 38.9358, lng:-77.1621, count: 1}]
+                        };
+
+                        google.maps.event.addListenerOnce(map,"idle", function() {
+                                heatmap.setDataSet(testData);
+                        });
+                };
+        </script>
 </html>
+
